# three

./: .gitignore  README.md  README.zh-CN.md
docs/: cli-claude.md  cli-codex.md  cli-gemini.md  cli-kimi.md  cli-opencode.md  cli-output-modes.md  config-schema.md
docs/plans/: 2026-02-04-adapter-capability-validation-plan.md  2026-02-04-role-only-design.md  2026-02-04-role-only-implementation-plan.md
examples/: adapter.json  config-codex.json  config.json  roles-notes.md
mcp-server-roundtable/: README.md
mcp-server-three/: README.md
mcp-server-three/src/: adapter_catalog.rs  backend.rs  config.rs  lib.rs  main.rs  personas.rs  server.rs  session_store.rs  test_utils.rs
mcp-server-three/tests/: claude.rs  codex.rs  gemini.rs  kimi.rs  opencode.rs
plugins/claude-code/.claude-plugin/: marketplace.json
plugins/claude-code/roundtable/commands/: roundtable.md
plugins/claude-code/three/: README.md
plugins/claude-code/three/.claude-plugin/: plugin.json
plugins/claude-code/three/commands/: builder.md  conductor.md  critic.md  info.md  oracle.md  researcher.md  review.md  (+4 more)
plugins/codex/: README.md
plugins/opencode/roundtable/: CHANGES_SUMMARY.md  PROMPT_IMPROVEMENTS.md  README.md
plugins/opencode/three/: README.md  index.js  index.mjs
three/: Cargo.toml  README.md
three/examples/: config.v2.json
three/src/: adapter_catalog.rs  backend.rs  config.rs  config_loader.rs  contract.rs  lib.rs  main.rs  server.rs  session_store.rs  test_support.rs
three/src/backends/: codex.rs  gemini.rs
three/tests/: claude.rs  codex.rs  gemini.rs  kimi.rs  opencode.rs
(+20 files in other folders)
