[package]
name = "three"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
dirs = "5.0"
fs2 = "0.4"
hex = "0.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.48", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"
